# pdf2md4llmwiki

./: .gitignore  CHANGELOG.md  README.en.md  README.es.md  README.md  app.py  config.yaml  extractor.py  formatter.py  install_ollama.sh  llm_client.py  pyproject.toml  requirements.txt  start.bat  start.sh
docs/superpowers/plans/: 2026-05-17-extraction-modes.md  2026-05-30-pdf2obsidiannoia.md
docs/superpowers/specs/: 2026-05-17-extraction-modes-design.md  2026-05-30-pdf2obsidiannoia-design.md
static/: index.html
tests/: test_format_raw.py
